feat(server): /user を /user/create に変更
