# server/src/main/kotlin/dev/s7a/w3/server/route/http/user/create/post.kt
@@ -1,26 +1,25 @@
-package dev.s7a.w3.server.route.http.user
+package dev.s7a.w3.server.route.http.user.create
 
 import dev.s7a.w3.server.database.entity.Desk
 import dev.s7a.w3.server.database.entity.User
 import dev.s7a.w3.server.database.table.Desks
-import dev.s7a.w3.server.model.UserRequest
-import dev.s7a.w3.server.model.UserResponse
+import dev.s7a.w3.server.model.UserCreateRequest
+import dev.s7a.w3.server.model.UserCreateResponse
 import dev.s7a.w3.server.util.receiveOrRespondBadRequest
 import io.ktor.application.ApplicationCall
 import io.ktor.application.call
 import io.ktor.http.HttpStatusCode
 import io.ktor.response.respond
 import io.ktor.util.pipeline.PipelineContext
-import org.jetbrains.exposed.sql.SqlExpressionBuilder.eq
 import org.jetbrains.exposed.sql.transactions.transaction
 
 /**
- * POST /user
+ * POST /user/create
  *
  * 新しいユーザーを作成する
  */
-suspend fun PipelineContext<Unit, ApplicationCall>.userPost() {
-    val request = call.receiveOrRespondBadRequest<UserRequest>() ?: return
+suspend fun PipelineContext<Unit, ApplicationCall>.userCreatePost() {
+    val request = call.receiveOrRespondBadRequest<UserCreateRequest>() ?: return
     val user = transaction {
         val desk = Desk.find { Desks.uuid eq request.deskUuid }.limit(1).firstOrNull()
         desk?.let {
@@ -29,5 +28,5 @@ suspend fun PipelineContext<Unit, ApplicationCall>.userPost() {
             }
         }
     } ?: return call.respond(HttpStatusCode.BadRequest)
-    call.respond(UserResponse(user))
+    call.respond(UserCreateResponse(user))
 }
